<resources>
    <string name="app_name">Marvel Characters</string>

<!--    Characters screen -->
    <string name="characters_screen_title">Characters</string>
    <string name="characters_load_state_error_text">Failed to load characters.</string>
    <string name="retry_button_text">Retry</string>

<!--    Detail screen -->
    <string name="detail_screen_title">Character information</string>
    <string name="detail_bookmark_error">Failed to bookmark</string>
    <string name="detail_bookmark_added">The character has been bookmarked</string>
    <string name="detail_bookmark_removed">The character has been removed from bookmarks</string>

<!--    API errors -->
    <string name="character_not_found">Character not found</string>
    <string name="page_not_found">Cannot load characters</string>
    <string name="unknown_error">An error occurred, please try again</string>

<!--    Filters -->
    <string name="search">Search</string>
    <string name="characters_search_query_hint_text">Type the character name</string>
    <string name="filter_unique">Hide variants</string>
    <string name="filter_with_images">With images</string>
    <string name="filter_with_descriptions">With descriptions</string>

<!--    Stub message -->
    <string name="not_implemented">This feature is not implemented yet</string>
    <string name="filter_favorites">Favorites</string>
</resources>
